# termcode

./: .pre-commit-config.yaml  README.md  pyproject.toml
