[tool.poetry]
name = "termcode"
version = "0.1.0"
description = ""
authors = ["Blackgolyb <andrejomelnickij@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"
pre-commit = "^3.6.2"

[tool.ruff]
extend-select = [
    "I",  #isort
    "UP", #pyupgrade
    "F", #pyflakes
]

[tool.ruff.extend-per-file-ignores]
# Also ignore `F401` in all `__init__.py` files.
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
